# codeindex

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
reviews/: 2026-03-09_pre-experiment-enhancements.md  2026-03-09_ui-ux-fixes.md  2026-03-23_cldctrl_typescript_review.md  bonsai_tracker_deep_review.md  navigation_mvvm_extraction_review.md
src/codeindex/: __init__.py  __main__.py  config.py
src/codeindex/cli/: commands.py  formatter.py
src/codeindex/core/: differ.py  git.py  indexer.py  query.py  snapshot.py
src/codeindex/parsers/: base.py  c_lang.py  cpp.py  csharp.py  go.py  java.py  powershell.py  python.py  registry.py  rust.py  typescript.py
src/codeindex/rules/: builtin.py  conventions.py  engine.py  seed.py
src/codeindex/server/: mcp.py
src/codeindex/sessions/: history.py  tracker.py
src/codeindex/store/: db.py  models.py  schema.py
tests/: test_codeindex.py
tests/fixture_project/: consumer.py  main.py
tests/fixture_project/pkg/: manager.py  models.py  signals.py  utils.py
