[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codeindex"
version = "0.1.0"
description = "AI-agent code intelligence tool — structured code context for coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Ryan Phillips"},
]
keywords = ["code-index", "mcp", "ai-agent", "static-analysis", "code-intelligence"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "tree-sitter>=0.22",
    "tree-sitter-python>=0.23",
    "pathspec>=0.12",
]

[project.optional-dependencies]
typescript = ["tree-sitter-typescript>=0.23"]
dev = ["pytest>=8.0", "pytest-cov"]

[project.scripts]
codeindex = "codeindex.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codeindex"]

[tool.pytest.ini_options]
testpaths = ["tests"]
